# sv-studio

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  run.ps1  sv_studio.py
.github/workflows/: build.yml
examples/systemverilog/: .svstudio.json
examples/systemverilog/rtl/: design.sv
examples/systemverilog/tb/: tb_top.sv
examples/uvm_counter/: .svstudio.json  README.md
examples/uvm_counter/rtl/: counter.sv
examples/uvm_counter/tb/: counter_agent.sv  counter_driver.sv  counter_env.sv  counter_if.sv  counter_item.sv  counter_monitor.sv  counter_scoreboard.sv  counter_sequence.sv  counter_test.sv  tb_top.sv
svstudio/: __init__.py  app.py  editor.py  main.py  project.py  resources.py  runner.py  theme.py  vcd.py  waveform.py
tests/: test_project.py  test_runner.py  test_ui_smoke.py  test_vcd.py
tools/: build_windows.ps1  render_preview.py  setup_open_source_uvm.ps1  svstudio-installer.iss  windows_version_info.txt
